--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Description of Poly-Coder site">
     
     
-    <link rel="preload" href="/assets/css/styles.90cf7108.css" as="style"><link rel="preload" href="/assets/js/app.90cf7108.js" as="script"><link rel="prefetch" href="/assets/css/1.styles.5a8ea794.css"><link rel="prefetch" href="/assets/js/1.5a8ea794.js"><link rel="prefetch" href="/assets/css/2.styles.2d14c38d.css"><link rel="prefetch" href="/assets/js/2.2d14c38d.js"><link rel="prefetch" href="/assets/js/3.9e029e80.js">
-    <link rel="stylesheet" href="/assets/css/styles.90cf7108.css"><link rel="stylesheet" href="/assets/css/1.styles.5a8ea794.css"><link rel="stylesheet" href="/assets/css/2.styles.2d14c38d.css">
+    <link rel="preload" href="/assets/css/styles.e6c181d9.css" as="style"><link rel="preload" href="/assets/js/app.e6c181d9.js" as="script"><link rel="prefetch" href="/assets/css/1.styles.5a8ea794.css"><link rel="prefetch" href="/assets/js/1.5a8ea794.js"><link rel="prefetch" href="/assets/css/2.styles.2d14c38d.css"><link rel="prefetch" href="/assets/js/2.2d14c38d.js"><link rel="prefetch" href="/assets/js/3.9e029e80.js">
+    <link rel="stylesheet" href="/assets/css/styles.e6c181d9.css"><link rel="stylesheet" href="/assets/css/1.styles.5a8ea794.css"><link rel="stylesheet" href="/assets/css/2.styles.2d14c38d.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/assets/js/app.90cf7108.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/assets/js/app.e6c181d9.js" defer></script>
   </body>
 </html>
