--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Description of Poly-Coder site">
     
     
-    <link rel="preload" href="/assets/css/styles.e6c181d9.css" as="style"><link rel="preload" href="/assets/js/app.e6c181d9.js" as="script"><link rel="prefetch" href="/assets/css/1.styles.5a8ea794.css"><link rel="prefetch" href="/assets/js/1.5a8ea794.js"><link rel="prefetch" href="/assets/css/2.styles.2d14c38d.css"><link rel="prefetch" href="/assets/js/2.2d14c38d.js"><link rel="prefetch" href="/assets/js/3.9e029e80.js">
-    <link rel="stylesheet" href="/assets/css/styles.e6c181d9.css"><link rel="stylesheet" href="/assets/css/1.styles.5a8ea794.css"><link rel="stylesheet" href="/assets/css/2.styles.2d14c38d.css">
+    <link rel="preload" href="/assets/css/styles.c93f71ca.css" as="style"><link rel="preload" href="/assets/js/app.c93f71ca.js" as="script"><link rel="prefetch" href="/assets/css/3.styles.fb9455dc.css"><link rel="prefetch" href="/assets/css/1.styles.b6f4198a.css"><link rel="prefetch" href="/assets/js/1.b6f4198a.js"><link rel="prefetch" href="/assets/css/2.styles.8d50e652.css"><link rel="prefetch" href="/assets/js/2.8d50e652.js"><link rel="prefetch" href="/assets/js/3.fb9455dc.js"><link rel="prefetch" href="/assets/css/4.styles.bcf296bd.css"><link rel="prefetch" href="/assets/js/4.bcf296bd.js"><link rel="prefetch" href="/assets/js/5.fbbeb79f.js"><link rel="prefetch" href="/assets/js/6.b516fb16.js"><link rel="prefetch" href="/assets/js/7.1c16dea4.js"><link rel="prefetch" href="/assets/js/8.16e829e9.js">
+    <link rel="stylesheet" href="/assets/css/3.styles.fb9455dc.css"><link rel="stylesheet" href="/assets/css/1.styles.b6f4198a.css"><link rel="stylesheet" href="/assets/css/2.styles.8d50e652.css"><link rel="stylesheet" href="/assets/css/styles.c93f71ca.css"><link rel="stylesheet" href="/assets/css/4.styles.bcf296bd.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/assets/js/app.e6c181d9.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/assets/js/app.c93f71ca.js" defer></script>
   </body>
 </html>
